hphp/hack/test/sound_dynamic/typing/as2.bad.php.exp
File "as2.bad.php", line 17, characters 8-20:
Typing error (Typing[4110])
  File "as2.bad.php", line 17, characters 14-20:
  Expected `dynamic`
  File "as2.bad.php", line 16, characters 12-19:
  But got `Box<int>`
